Cases UI: Fixed spacing between elements.

--- a/app/scss/views/_cases.scss
+++ b/app/scss/views/_cases.scss
@@ -2,7 +2,7 @@
 	background-color: #fff;
 
 	.content-grid{
-		padding-top: 75px;
+		padding-top: 195px;
 	}
 
 	.subtitle{
@@ -26,7 +26,7 @@
 		._cover{
 			position: relative;
 			width: 100%;
-			margin-bottom: 75px;
+			margin-bottom: 120px;
 
 			img{
 				display: block;
@@ -38,7 +38,7 @@
 			position: relative;
 			width: 100%;
 			min-height: 210px;
-			margin-bottom: 210px;
+			margin-bottom: 170px;
 			font-family: 'Founders-L', sans-serif;
 			font-weight: 100;
 			color: $black-gray;
@@ -102,7 +102,7 @@
 		._inspiration{
 			position: relative;
 			width: 100%;
-			margin-bottom: 180px;
+			margin-bottom: 200px;
 
 			.subtitle{
 				margin-bottom: 75px;
